# IoT-arduino-raspberryPI

./: AGENTS.md  CLAUDE.md  README.md
app01_cpp/: CLAUDE.md  SSDLC_IoT_Sensor_Pipeline_Plan.md
app01_cpp/gateway-rpi/: CMakeLists.txt
app01_cpp/gateway-rpi/fuzz/: fuzz_decoder.cpp
app01_cpp/gateway-rpi/src/: FrameDecoder.cpp  FrameDecoder.h  NodeRegistry.cpp  NodeRegistry.h  Protocol.h  SipHash.h  main.cpp
app01_cpp/gateway-rpi/systemd/: iot-gateway.service
app01_cpp/node-arduino/sensor_node/: sensor_node.ino
app01_cpp/tools/: frame_simulator.py
